# gapic-generator-csharp

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BAZEL.md  BUILD.bazel  Directory.Build.props  Directory.Packages.props  Dockerfile  DotnetToolProperties.xml  Generator.sln  NuGet.config  README.md  RELEASING.md  TESTING.md  TODO.md  WORKSPACE.bazel  cloudbuild-test.yaml  docker-entrypoint.sh  gapic.sh  generateprotos.sh  global.json  main.py  repositories.bzl  rununittests.sh  test-all-rest.sh  test-rest.sh
.allstar/: binary_artifacts.yaml
.github/: CODEOWNERS  renovate.json
.github/workflows/: build.yml
Google.Api.CommonProtos/: Annotations.cs  Auth.cs  Backend.cs  Billing.cs  Client.cs  ConfigChange.cs  Consumer.cs  Context.cs  Control.cs  Distribution.cs  Documentation.cs  Endpoint.cs  FieldBehavior.cs  Google.Api.CommonProtos.csproj  Http.cs  Httpbody.cs  Label.cs  Log.cs  Logging.cs  Metric.cs  MonitoredResource.cs  Monitoring.cs  Quota.cs  Resource.cs  Service.cs  SourceInfo.cs  SystemParameter.cs  Usage.cs
Google.Api.CommonProtosExtra/: Client.cs  FieldBehavior.cs  Google.Api.CommonProtosExtra.csproj  Longrunning.cs  Metadata.cs  Resource.cs  Resources.cs  Signature.cs
Google.Api.Generator/: AssemblyInfo.cs  CodeGenerator.cs  Generator.cs  Google.Api.Generator.csproj  Logging.cs  Program.cs
Google.Api.Generator.DiffSimplifier/: Google.Api.Generator.DiffSimplifier.csproj  Program.cs
Google.Api.Generator.IntegrationTests/: ComplianceRestTest.cs  EchoTest.cs  Google.Api.Generator.IntegrationTests.csproj  README.md  ShowcaseTestBase.cs  TestResources.cs  compliance_suite.json
Google.Api.Generator.Rest/: AssemblyInfo.cs  CodeGenerator.cs  Features.cs  Google.Api.Generator.Rest.csproj  Lists.cs  PackageEnumStorage.cs  Program.cs
Google.Api.Generator.Rest.Tests/: GeneratedCodeTest.cs  GoldenUnitTest.cs  Google.Api.Generator.Rest.Tests.csproj  NamingTest.cs  PackageEnumStorageTest.cs  SampleUnitTest.cs  TestResources.cs
Google.Api.Generator.Rest/Models/: AuthScope.cs  DataModel.cs  DataPropertyModel.cs  EnumMemberModel.cs  EnumModel.cs  Features.cs  MethodModel.cs  Naming.cs  PackageModel.cs  ParameterModel.cs  Properties.cs  ResourceModel.cs  SchemaTypes.cs
Google.Api.Generator.Rest/StaticResources/: Net40Config.xml  NetStandard10Config.xml
Google.Api.Generator.Testing/: Google.Api.Generator.Testing.csproj  PathUtils.cs  TextComparer.cs
Google.Api.Generator.Tests/: Google.Api.Generator.Tests.csproj  Initialization.cs  InvocationTest.cs  Invoker.cs  ProtoExtensionsTest.cs  ProtoTest.cs  ProtoTest.proto  ProtocTest.cs  ResourceDetailsTest.cs  ResourcePatternTest.cs  SystemExtensionsTest.cs  WhitespaceFormatterTest.cs  XmlDocSplitterTest.cs  YamlParserTest.cs
Google.Api.Generator.Tests/ProtoTests/: Basic.proto  BasicClient.cs  BasicGrpcClientFake.cs  BasicLro.proto  BasicLroClient.cs  Directory.Build.props  GaxApiDescriptor.cs  PackageApiMetadata.cs  ProtoMsgFake.cs
Google.Api.Generator.Utils/: Disposable.cs  Google.Api.Generator.Utils.csproj  Logging.cs  ResultFile.cs  SourceFileContext.cs  SystemExtensions.cs  Typ.cs
Google.Api.Generator.Utils.Tests/: Google.Api.Generator.Utils.Tests.csproj
Google.Api.Generator.Utils.Tests/Formatting/: WhitespaceFormatterTest.cs  XmlDocSplitterTest.cs
Google.Api.Generator.Utils/Formatting/: CodeFormatter.cs  PragmaWarningFormatter.cs  WhitespaceFormatter.cs  XmlDocSplitter.cs
Google.Api.Generator.Utils/Roslyn/: Annotations.cs  ArgModifier.cs  Keywords.cs  Modifier.cs  ObjectInitExpr.cs  PragmaWarnings.cs  RoslynBuilder.cs  RoslynConverters.cs  RoslynExtensions.cs  XmlDoc.cs
Google.Api.Generator/ConfigProtos/: CommonResources.cs  GapicMetadata.cs  Service.cs  ServiceConfig.cs  SnippetIndex.cs  build_protos.sh  common_resources.proto  gapic_metadata.proto  service.proto  service_config.proto  snippet_index.proto
Google.Api.Generator/Formatting/: CodeFormatter.cs  PragmaWarningFormatter.cs  WhitespaceFormatter.cs  XmlDocSplitter.cs
Google.Api.Generator/Generation/: ApiDescriptorGenerator.cs  CsProjGenerator.cs  EnumStringGenerator.cs  LroAdaptationGenerator.cs  MetadataGenerator.cs  MethodDetails.cs  PackageApiMetadataGenerator.cs  ResourceNamesGenerator.cs  ServiceAbstractClientClassCodeGenerator.cs  ServiceBuilderCodeGenerator.cs  ServiceCodeGenerator.cs  ServiceCollectionExtensionsGenerator.cs  ServiceDetails.cs  ServiceImplClientClassGenerator.cs  ServiceMethodGenerator.Signatures.cs  ServiceMethodGenerator.cs  ServiceSettingsCodeGenerator.cs  ServiceYaml.cs  SnippetCodeGenerator.cs  SourceFileContext.cs  UnitTestCodeGeneration.cs
Google.Api.Generator/Google.Protobuf.Compiler/: Plugin.cs  build_plugin.sh  plugin.proto
Google.Api.Generator/ProtoUtils/: IMessageExtensions.cs  ProtoCatalog.cs  ProtoConsts.cs  ProtoExtensions.cs  ProtoMsg.cs  ProtoTyp.cs  ResourceDetails.cs  ResourcePattern.cs
Google.Api.Generator/RoslynUtils/: ArgModifier.cs  Keywords.cs  Modifier.cs  ObjectInitExpr.cs  PragmaWarnings.cs  RoslynBuilder.cs  RoslynConverters.cs  RoslynExtensions.cs  XmlDoc.cs
Google.LongRunningExtra/: Google.LongRunningExtra.csproj  Operations.cs
ResourceSetUpgrade/: ResourceSetUpgrade.sln
bazel_example/: BUILD.bazel  README.md  WORKSPACE.bazel  common_resources_config.json  example.proto  example.yaml  grpc_service_config.json
generator-input/: pipeline-config.json  pipeline-state.json
rules_csharp_gapic/: BUILD.bazel  csharp_compiler.bzl  csharp_compiler_repo.bzl  csharp_gapic.bzl  csharp_gapic_pkg.bzl  csharp_gapic_repo.bzl  csharp_nongapic_pkg.bzl
tools/: bazel-test.sh  grpc_csharp_plugin  grpc_csharp_plugin_macosx_x64  protoc  update-grpc.sh  update-protoc.sh
unstable-packages/: Google.Api.CommonProtos.2.0.0-alpha00.nupkg  Google.Api.Gax.3.0.0-alpha00.nupkg  Google.Api.Gax.Grpc.3.0.0-alpha00.nupkg  Google.Api.Gax.Grpc.Gcp.3.0.0-alpha00.nupkg  Google.Api.Gax.Grpc.GrpcCore.3.0.0-alpha00.nupkg  Google.Api.Gax.Grpc.Testing.3.0.0-alpha00.nupkg  Google.Api.Gax.Rest.3.0.0-alpha00.nupkg  Google.Api.Gax.Testing.3.0.0-alpha00.nupkg  Google.LongRunning.2.0.0-beta00.nupkg
(+690 files in other folders)
