load("@com_googleapis_gapic_generator_csharp//rules_csharp_gapic:csharp_gapic.bzl", "csharp_proto_library", "csharp_grpc_library", "csharp_gapic_library")
load("@com_googleapis_gapic_generator_csharp//rules_csharp_gapic:csharp_gapic_pkg.bzl", "csharp_gapic_assembly_pkg")

proto_library(
    name = "example_src",
    srcs = [
        "example.proto",
    ],
)

csharp_proto_library(
    name = "example_proto",
    deps = [
        ":example_src",
    ],
)

csharp_grpc_library(
    name = "example_grpc",
    srcs = [
        ":example_src",
    ],
    deps = [
        ":example_proto",
    ]
)

csharp_gapic_library(
    name = "example_gapic",
    srcs = [
        ":example_src",
    ],
    deps = [
        ":example_proto",
        ":example_grpc",
    ]
)

csharp_gapic_assembly_pkg(
    name = "example_pkg",
    deps = [
        ":example_proto",
        ":example_grpc",
        ":example_gapic",
    ]
)
