load("@gapic_generator_csharp//rules_csharp_gapic:csharp_gapic.bzl", "csharp_proto_library", "csharp_grpc_library", "csharp_gapic_library")
load("@gapic_generator_csharp//rules_csharp_gapic:csharp_gapic_pkg.bzl", "csharp_gapic_assembly_pkg")

proto_library(
    name = "example_proto",
    srcs = [
        "example.proto",
    ],
)

csharp_proto_library(
    name = "example_csharp_proto",
    deps = [
        ":example_proto",
    ],
)

csharp_grpc_library(
    name = "example_csharp_grpc",
    srcs = [
        ":example_proto",
    ],
    deps = [
        ":example_csharp_proto",
    ]
)

csharp_gapic_library(
    name = "example_csharp_gapic",
    srcs = [
        ":example_proto",
    ],
    deps = [
        ":example_csharp_proto",
        ":example_csharp_grpc",
    ],
    grpc_service_config = "grpc_service_config.json",
)

csharp_gapic_assembly_pkg(
    name = "example_csharp_pkg",
    deps = [
        ":example_csharp_proto",
        ":example_csharp_grpc",
        ":example_csharp_gapic",
    ]
)
