# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gapic_generator_csharp//rules_csharp_gapic:csharp_gapic.bzl", "csharp_proto_library", "csharp_grpc_library", "csharp_gapic_library")
load("@gapic_generator_csharp//rules_csharp_gapic:csharp_gapic_pkg.bzl", "csharp_gapic_assembly_pkg")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "example_proto",
    srcs = [
        "example.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:resource_proto",
    ],
)

csharp_proto_library(
    name = "example_csharp_proto",
    deps = [
        ":example_proto",
    ],
)

csharp_grpc_library(
    name = "example_csharp_grpc",
    srcs = [
        ":example_proto",
    ],
    deps = [
        ":example_csharp_proto",
    ]
)

# Simplified the example for now, removing the
# common_resources_config. With it, the code 
# that the example produces is not buildable.
csharp_gapic_library(
    name = "example_csharp_gapic",
    srcs = [
        ":example_proto",
    ],
    deps = [
        ":example_csharp_proto",
        ":example_csharp_grpc",
    ],
    grpc_service_config = "grpc_service_config.json",
    # common_resources_config = "common_resources_config.json",
)

csharp_gapic_assembly_pkg(
    name = "example_csharp_pkg",
    deps = [
        ":example_csharp_proto",
        ":example_csharp_grpc",
        ":example_csharp_gapic",
    ]
)
