# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_protobuf",
#    sha256 = "e5265d552e12c1f39c72842fa91d84941726026fa056d914ea6a25cd58d7bbf8",
#    urls = ["https://github.com/protocolbuffers/protobuf/archive/v3.12.3.zip"],
#    strip_prefix = "protobuf-3.12.3",
# The 3.12.3 tag is incorrect, so reference the commit-hash of what it should have been.
    sha256 = "bba884e1dce7b9ba5bce566bfa2d23ea2c824aa928a9133139c5485cefa69139",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/9ce8c330e736b99c2bb00bdc6a60f00ab600c283.zip"],
    strip_prefix = "protobuf-9ce8c330e736b99c2bb00bdc6a60f00ab600c283",
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# Note: Although this is referencing grpc v1.x, the generated C# is for use
# with nuget packages Grpc.Core and Grpc.Core.Api v2.x
http_archive(
    name = "com_github_grpc_grpc",
    strip_prefix = "grpc-1.30.0",
    sha256 = "4f0ad3557539a3d6edfad1693a92bd21acd3a6c3d610faa4714d64ad1d0a8072",
    urls = ["https://github.com/grpc/grpc/archive/v1.30.0.zip"],
)
load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

http_archive(
    name = "rules_proto",
    sha256 = "602e7161d9195e50246177e7c55b2f39950a9cf7366f74ed5f22fd45750cd208",
    strip_prefix = "rules_proto-97d8af4dc474595af3900dd85cb3a29ad28cc313",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_proto/archive/97d8af4dc474595af3900dd85cb3a29ad28cc313.tar.gz",
        "https://github.com/bazelbuild/rules_proto/archive/97d8af4dc474595af3900dd85cb3a29ad28cc313.tar.gz",
    ],
)
load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()

# Latest version as of 2020-06-23
http_archive(
    name = "com_google_googleapis",
    strip_prefix = "googleapis-cf41866c6f14f10a07aa1e2a1260fc0a2727d889",
    urls = ["https://github.com/googleapis/googleapis/archive/cf41866c6f14f10a07aa1e2a1260fc0a2727d889.zip"],
)
load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")
switched_rules_by_language(name = "com_google_googleapis_imports", gapic = True)

# http_archive(
#     name = "gapic_generator_csharp",
#     urls = ["https://github.com/googleapis/gapic-generator-csharp/archive/master.zip"],
#     strip_prefix = "gapic-generator-csharp-master",
# )

# Use the following to use the bazel rules defined locally, rather than fetched from github.
local_repository(
    name = "gapic_generator_csharp",
    path = "../",
)

load("@gapic_generator_csharp//:repositories.bzl", "gapic_generator_csharp_repositories")
gapic_generator_csharp_repositories()
